  - added customer list filter: liabilities without invoice flag [chilan]
  - added support for voip phone priority [kosa/chilan]
  - changed customer instant messengers handling code to more generic code which will allow
    to easier support more im types in the future [chilan]
  - added support for change voip account settings in userpanel by customer [kosa/chilan]

version 1.11.20 (2016-04-19):

  - bclean: added responsive menu [kyob]
  - www, userpanel messages are always sent initially and userpanel messages are
    marked as delivered after message read confirmation [chilan]
  - added support for user groups [wawryk]
  - customer address and postal address were separated to street, building and
    apartment fields [chilan]
  - added support for external system customer identifiers need to bind
    lms customers with external system customers [chilan]
  - invoice notes can be edited from now [chilan]
  - allow to clone network devices from user interface [chilan]
  - add hook for documents in plugins [wawryk]
  - don't allow to issue invoice credit note for invoice which already has issued
    credit note [chilan]
  - bumped html2pdf library version to 4.5.0 [prezes_kk]
  - allow lms-payments.php script to set aligned periods for invoice items
    (added special symbol %aligned_period) [chilan]
  - added type, private and opened filters in event list [chilan]
  - localised bank account functions use common iban account functions [chilan]
  - we can add many bank accounts to single customer (both source and destination
    accounts) [chilan]
  - invoices.show_all_accounts allows to display all customer bank accounts
    on invoices [chilan]
  - allow to select customer for all imported transactions [wawryk/chilan]
  - replaced all customer selectiors by smarty customerlist function [chilan]
  - removed deprecated chkconfig, check_conf and get_conf public functions [chilan]
  - lib/config.php is needed only for config load module [chilan]