@@ -136,6 +136,7 @@ version ?.??.?? (????-??-??):
   - changed customer instant messengers handling code to more generic code which will allow
     to easier support more im types in the future [chilan]
   - added support for change voip account settings in userpanel by customer [kosa/chilan]
+  - when phpui.big_networks is set to true show customer name on left side of input control [chilan]
 
 version 1.11.20 (2016-04-19):
 
